updated readme with version numbering info

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,22 @@ devtools::install_github("ropenscilabs/datastorr")
 devtools::install_github("SrivastavaLab/fwdata")
 devtools::install_github("SrivastavaLab/bwgbiomass")
 ```
+
+## Data Version Numbering
+
+Data versions are numbered with a `bwgbiomass` version and an `allometrydata`
+version.
+
+For example:
+
+**v.0.0.1_0.0.1**
+
+The numbers before the `_` indicate which version of bwgbiomass is being used. When
+updates are made to the bwgbiomass code, this number will change. The numbers after
+the `_` indicate which version of the
+[allometry data](https://github.com/SrivastavaLab/allometrydata) was used.
+When allometry data are added or changed, this number will change.
+
 ## Documentation
 
 ### General Assumptions
@@ -40,8 +56,8 @@ ostracods, which are marked as *adult*
 * Species found at multiple sites are assumed to have the same biomass x length
 relationship and the linear model was built using all data, not separated by
 site, habitat, or researcher
-* Sizes in the biomass table with an underscore ("_") are assumed to be a size
-range and the average of the numbers on either side of the "_" was taken
+* Sizes in the biomass table with an underscore (`_`) are assumed to be a size
+range and the average of the numbers on either side of the `_` was taken
 * Species in the allometry matrix with no `bwg_name` are assumed not to have a
 `bwg_name` and given a placeholder name of `MISSING_X` where `X` is a unique
 number for that species
